# ducklake

./: CATALOG_NOT_NULL.md  CATALOG_REORDER.md  CATALOG_UUID.md  DUCKLAKE.md  FORKING.md  FORKING_TODO.md  NEXT_STEPS.md  README.md  SNAPSHOT_SEQUENCE_FIX.md  SNAPSHOT_SEQUENCE_WORKPLAN.md
docs/: ARCHITECTURE.md  AUTO_CREATE_SCHEMA.md  BUILD.md  IMPLEMENTATION.md  POSTGRESQL.md  README.md  RUST_RESEARCH.md  SNAPSHOT_SEQUENCE.md
examples/minio-demo-server/: README.md
schema/: duckdb.sql  postgresql.sql
src/: ducklake_extension.cpp
src/functions/: CMakeLists.txt  ducklake_catalogs.cpp  ducklake_cleanup_files.cpp  ducklake_expire_snapshots.cpp  ducklake_flush_inlined_data.cpp  ducklake_fork_catalog.cpp
src/include/common/: ducklake_options.hpp  ducklake_snapshot.hpp
src/include/functions/: ducklake_table_functions.hpp
src/include/metadata_manager/: postgres_metadata_manager.hpp
src/include/storage/: ducklake_catalog.hpp  ducklake_initializer.hpp  ducklake_metadata_manager.hpp  ducklake_transaction.hpp
src/metadata_manager/: postgres_metadata_manager.cpp
src/storage/: ducklake_catalog.cpp  ducklake_initializer.cpp  ducklake_metadata_manager.cpp  ducklake_multi_file_reader.cpp  ducklake_secret.cpp  ducklake_storage.cpp  ducklake_transaction.cpp
test/configs/: attach_ducklake.json
test/sql/: ducklake_basic.test
test/sql/add_files/: add_empty_file.test  add_file_footer_size.test  add_file_specific_schema.test  add_files.test  add_files_compaction.test  add_files_complex_nested_stats_mre.test  add_files_extra_columns.test  add_files_hive.test  (+18 more)
(+237 files in other folders)
